--- a/2022Spring-Web/Web_ICP2/index.html
+++ b/2022Spring-Web/Web_ICP2/index.html
@@ -1,4 +1,11 @@
 <!DOCTYPE html>
+
+<!-- Joe Moon
+    ICP 2 - HTML & CSS
+    CSEE5590-0003
+    Spring 2022
+-->
+
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -9,8 +16,14 @@
   </head>
   <body>
     <div id="wrapper">
-      <span class="center"><h1>ICP 2 - HTML & CSS</h1></span>
+        <!-- Web page title banner -->
+        <span id="banner">
+            <img src="images/umkc.png" alt="logo">
+            <h1 class="inline">ICP 2 - HTML & CSS</h1>
+            <img src="images/umkc.png" alt="logo">
+        </span>
 
+        <!-- Web page content description -->
       <div class="visual-container">
         <p>
           This webpage is for ICP 2 of the Web and Mobile Programming class.
@@ -36,8 +49,26 @@
         </ol>
       </div>
 
+      <!-- Flex box example with images -->
       <div class="visual-container center">
-        <h3>Here is a video on web development to help you along...</h3>
+          <span class="sub-banner">
+            <h4 class="inline">Some images for you to look at.</h4>
+            <img src="images/eyes.jpg" alt="eye emoji" id="eyes">
+          </span>
+          <p>These are random images collected from the web.</p>
+          <div>  
+              <!-- A simple image reel using flex-box -->
+            <ul id="img-reel">
+                <li><img src="images/img1.jpg" alt="some image"></li>
+                <li><img src="images/img2.jpg" alt="some image"></li>
+                <li><img src="images/img3.jpg" alt="some image"></li>
+            </ul>
+          </div>
+      </div>
+
+      <!-- Embedded video -->
+      <div class="visual-container center">
+        <h3>Here are some videos on web development to help you along...</h3>
         <iframe
           width="560"
           height="315"
@@ -47,6 +78,7 @@
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen
         ></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/GVTRJa4B4fY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
     </div>
   </body>
