Readme updates and ICP1 report

--- a/2022Spring-Web/Web_ICP2/index.html
+++ b/2022Spring-Web/Web_ICP2/index.html
@@ -16,14 +16,14 @@
   </head>
   <body>
     <div id="wrapper">
-        <!-- Web page title banner -->
-        <span id="banner">
-            <img src="images/umkc.png" alt="logo">
-            <h1 class="inline">ICP 2 - HTML & CSS</h1>
-            <img src="images/umkc.png" alt="logo">
-        </span>
+      <!-- Web page title banner -->
+      <span id="banner">
+        <img src="images/umkc.png" alt="logo" />
+        <h1 class="inline">ICP 2 - HTML & CSS</h1>
+        <img src="images/umkc.png" alt="logo" />
+      </span>
 
-        <!-- Web page content description -->
+      <!-- Web page content description -->
       <div class="visual-container">
         <p>
           This webpage is for ICP 2 of the Web and Mobile Programming class.
@@ -51,19 +51,19 @@
 
       <!-- Flex box example with images -->
       <div class="visual-container center">
-          <span class="sub-banner">
-            <h4 class="inline">Some images for you to look at.</h4>
-            <img src="images/eyes.jpg" alt="eye emoji" id="eyes">
-          </span>
-          <p>These are random images collected from the web.</p>
-          <div>  
-              <!-- A simple image reel using flex-box -->
-            <ul id="img-reel">
-                <li><img src="images/img1.jpg" alt="some image"></li>
-                <li><img src="images/img2.jpg" alt="some image"></li>
-                <li><img src="images/img3.jpg" alt="some image"></li>
-            </ul>
-          </div>
+        <span class="sub-banner">
+          <h4 class="inline">Some images for you to look at.</h4>
+          <img src="images/eyes.jpg" alt="eye emoji" id="eyes" />
+        </span>
+        <p>These are random images collected from the web.</p>
+        <div>
+          <!-- A simple image reel using flex-box -->
+          <ul id="img-reel">
+            <li><img src="images/img1.jpg" alt="some image" /></li>
+            <li><img src="images/img2.jpg" alt="some image" /></li>
+            <li><img src="images/img3.jpg" alt="some image" /></li>
+          </ul>
+        </div>
       </div>
 
       <!-- Embedded video -->
@@ -78,7 +78,16 @@
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen
         ></iframe>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/GVTRJa4B4fY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/GVTRJa4B4fY"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        >
+        </iframe>
       </div>
     </div>
   </body>
