Anchor tags implemented with images.

--- a/2022Spring-Web/Web_ICP2/Source/index.html
+++ b/2022Spring-Web/Web_ICP2/Source/index.html
@@ -55,13 +55,28 @@
           <h4 class="inline">Some images for you to look at.</h4>
           <img src="images/eyes.jpg" alt="eye emoji" id="eyes" />
         </span>
-        <p>These are random images collected from the web.</p>
+        <p>These are random images collected from the web. You can click on them to go to their source.</p>
         <div>
           <!-- A simple image reel using flex-box -->
           <ul id="img-reel">
-            <li><img src="images/img1.jpg" alt="some image" /></li>
-            <li><img src="images/img2.jpg" alt="some image" /></li>
-            <li><img src="images/img3.jpg" alt="some image" /></li>
+            <li>
+              <a href="https://unsplash.com/s/photos/view" target="_blank">
+                <img src="images/img1.jpg" alt="some image" />
+              </a>
+            </li>
+            <li>
+              <a
+                href="https://www.gettyimages.ca/collections/500pxi"
+                target="_blank"
+              >
+                <img src="images/img2.jpg" alt="some image" />
+              </a>
+            </li>
+            <li>
+              <a href="https://unsplash.com/s/photos/magic" target="_blank">
+                <img src="images/img3.jpg" alt="some image" />
+              </a>
+            </li>
           </ul>
         </div>
       </div>
