RWD Task complete.

--- a/2022Spring-Web/Web_ICP3/Source/RWD Task/input/input.html
+++ b/2022Spring-Web/Web_ICP3/Source/RWD Task/input/input.html
@@ -11,7 +11,7 @@ TODO:
 
 <html lang="en">
   <head>
-    <title>RWD Task</title>
+    <title>ICP3 - RWD Task</title>
     <meta content="text/html; charset=windows-1252" http-equiv="Content-Type" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -20,6 +20,14 @@ TODO:
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
+
+    <!-- Google Font Links -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&family=Play&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="container">
@@ -29,8 +37,8 @@ TODO:
         </div>
         <div class="col">
           <div>
-            <h1 class="display-1 text-end title-text">Joe Moon</h1>
-            <h3 class="text-end title-text">Computer Science Student</h3>
+            <h1 class="display-1 text-end header-text">Joe Moon</h1>
+            <h3 class="text-end header-text">Computer Science Student</h3>
           </div>
         </div>
       </div>
@@ -38,11 +46,12 @@ TODO:
         <div><hr /></div>
       </div>
       <div class="row">
-        <div class="col" id="test-col">
+        <div class="col-lg">
           <img
             alt="html code"
-            class="img-fluid"
-            src="../SampleImages/Image.png"
+            class="img-fluid float-end"
+            id="banner"
+            src="../SampleImages/image.png"
           />
         </div>
       </div>
@@ -52,7 +61,7 @@ TODO:
         </div>
       </div>
       <div class="row text-center title-text" id="featured-work">
-        <div class="col-lg-3">
+        <div class="col">
           <img
             alt="app store icon"
             class="img-fluid"
@@ -65,7 +74,7 @@ TODO:
             >
           </p>
         </div>
-        <div class="col-lg-3">
+        <div class="col">
           <img
             alt="sunflower"
             class="img-fluid"
@@ -78,7 +87,7 @@ TODO:
             >
           </p>
         </div>
-        <div class="col-lg-3">
+        <div class="col">
           <img alt="bokeh" class="img-fluid" src="../SampleImages/app3.png" />
           <h3>BOKEH</h3>
           <p>
@@ -87,7 +96,7 @@ TODO:
             >
           </p>
         </div>
-        <div class="col-lg-3">
+        <!-- <div class="col-lg-3">
           <img
             alt="PlaceHolderImage3"
             class="img-fluid"
@@ -99,7 +108,7 @@ TODO:
               >https://github.com/broccolijs/broccoli</a
             >
           </p>
-        </div>
+        </div> -->
       </div>
     </div>
 
