--- a/2022Spring-Web/Web_ICP4/Source/GitHubUserFinder/index.html
+++ b/2022Spring-Web/Web_ICP4/Source/GitHubUserFinder/index.html
@@ -1,6 +1,8 @@
 <html>
 <head>
     <title>Github User Finder</title>
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="style.css" rel="stylesheet">
     <script src="jquery.js" type="text/javascript"></script>
     <script src="script.js" type="text/javascript"></script>
@@ -10,15 +12,30 @@
     <h1>Find Me!</h1>
 </header>
 <div id="container">
-    <div class="search">
-        <input id="username" placeholder="enter a github username..." type="text"></input>
+    <div class="row">
+        <div class="col">
+            <div class="search">
+                <input id="username" placeholder="enter a github username..." type="text"></input>
+            </div>
+        </div>
     </div>
-    <div id="profile">
-        <h2></h2>
-        <div class="avatar"></div>
-        <div class="information"></div>
+<div class="row">
+    <div class="col">
+        <div id="profile">
+            <h2></h2>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <div class="avatar"></div>
+        </div>
+        <div class="col">
+            <div class="information"><ul id="userInfo"></ul></div>
+        </div>
+    </div>
     </div>
 </div>
-
+<!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
